--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -16,16 +16,16 @@ tests_config:
 #    - test_verify_accounts_in_crm
 #    - test_switch_between_accounts_ca
 
-- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
-  class: TestPagesCA
-  tests:
-    - test_main_menu_pages_loading
-#
-#- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
-#  class: PersonalDetailsUpdateTestCA
+#- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
+#  class: TestPagesCA
 #  tests:
-#    - test_update_personal_details_in_ca
-#    - test_personal_details_were_updated_in_crm
+#    - test_main_menu_pages_loading
+#
+- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+  class: PersonalDetailsUpdateTestCA
+  tests:
+    - test_update_personal_details_in_ca
+    - test_personal_details_were_updated_in_crm
 #    - test_update_personal_details_in_crm
 #    - test_personal_details_were_updated_in_ca
 #
