--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -20,15 +20,15 @@ tests_config:
 #  tests:
 #    - test_update_customer
 #
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_Lead
-#  class: CreateLead
-#  tests:
-#    - test_create_lead_api
-#
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Leads
-#  class: ReadLeads
-#  tests:
-#    - test_read_leads_api
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_Lead
+  class: CreateLead
+  tests:
+    - test_create_lead_api
+
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Leads
+  class: ReadLeads
+  tests:
+    - test_read_leads_api
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Login_Token
 #  class: LoginToken
