--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -16,6 +16,11 @@ tests_config:
     - test_verify_accounts_in_crm
     - test_switch_between_accounts_ca
 
+- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
+  class: TestPagesCA
+  tests:
+    - test_main_menu_pages_loading
+
 - module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
   class: PersonalDetailsUpdateTestCA
   tests:
