--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -16,17 +16,21 @@ FirstLeadInfo:
   street: "street test"
   postal_code: "88888"
   first_country: "Germany"
+  first_country_albania: "Albania"
   first_descriptions: "Description test"
   phone: "222222"
   phone_area_code:
   first_tittle: "tittle test"
-  first_lead_source: "Conference"
+  first_lead_source: "Other"
+  first_lead_source_empty: ""
   first_lead_status: "R - New"
+  first_lead_status_empty: ""
   first_lead_status_not_interested: "R - Not Intrested"
   first_lead_status_new: "New"
   first_lead_status_giga: "C - New"
   first_lead_status_uft: "New"
   first_lead_status_b_test: "B - Test"
+  first_lead_status_none: "--None--"
   first_assigned_to: "Panda Auto"
   first_source_name: "source name test"
   brand:
@@ -54,7 +58,7 @@ SecondLeadInfo:
   first_descriptions: "Second description test"
   phone: "333333"
   first_tittle: "second tittle test"
-  first_lead_source: "Conference"
+  first_lead_source: "Other"
   first_lead_status: "B - No interest"
   first_lead_status_giga: "R - Not Intrested"
   first_lead_status_new: "Not interested"
@@ -78,8 +82,8 @@ client_1:
 #  first_name: "John-test" # manual config
   EVAL_first_name: "'testqa' + (''.join(random.sample(string.ascii_uppercase*6, 6)))"
   last_name: "Doe"
-  EVAL_email: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S')) + '@pandats.com'"
-  EVAL_email1: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S')) + 'c@pandats.com'"
+  EVAL_email: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S%f')) + '@pandats.com'"
+  EVAL_email1: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S%f')) + 'c@pandats.com'"
 #  email: "john_doe_20180823_131412@pandats.com" # manual config
   short_client_name: "John-test Doe"
   phone: "7777777"
