--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -9,8 +9,8 @@ brands:
 #- name: q8
 #  config_file: q8.yml
 
-- name: kontofx
-  config_file: kontofx.yml
+#- name: kontofx
+#  config_file: kontofx.yml
 
 #- name: brokerz
 #  config_file: brokerz.yml
@@ -23,10 +23,10 @@ brands:
 
 #- name: dax-300
 #  config_file: dax-300.yml
-#
-#- name: strattonmarkets-eu
-#  config_file: strattonmarkets-eu.yml
-#
+
+- name: strattonmarkets-eu
+  config_file: strattonmarkets-eu.yml
+
 #- name: tradenero
 #  config_file: tradenero.yml
 #
