--- a/src/main/python/ui/crm/model/BrandsXpath/uft_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/uft_xpath.yml
@@ -24,3 +24,5 @@ AffiliatePage:
   input_methods: "//div[@class = 'select-options options-enabled']//input[@class = 'button-span ng-untouched ng-pristine ng-valid glyphicon-minus-sign']"
   blocked_country_drop_down: "//div[@class = 'multi-select margin-top-10']/div[@class = 'multi-select-holder']"
   input_country: "//div[@class = 'select-options options-enabled']//input[@class = 'button-span ng-untouched ng-pristine ng-valid glyphicon-minus-sign']"
+CALoginPage:
+  check_box_accept: "//span[contains (text(), 'I accept the')]"
