--- a/src/test/python/resources/config/Brands/libramarkets.yml
+++ b/src/test/python/resources/config/Brands/libramarkets.yml
@@ -1,3 +1,3 @@
 pretty_name: "Libramarkets"
 url: "https://libramarkets.ptscrm.com/"
-url_ca: "https://libramarkets.com/#/"
+url_ca: "https://libramarkets.com/?lang=en#/"
