--- a/src/test/python/resources/config/Brands/solocapitlas.yml
+++ b/src/test/python/resources/config/Brands/solocapitlas.yml
@@ -1,3 +1,4 @@
 pretty_name: "Solocapitals"
 url: "https://solocapitals.ptscrm.com/"
+url_ca: "https://www.solocapitals.net/#/"
 otp_secret: TYP45DNKQL6JGIJX
