--- a/src/test/python/resources/config/tests9.yml
+++ b/src/test/python/resources/config/tests9.yml
@@ -1,20 +1,32 @@
 tests_config:
 
-#################################### LEADS ################################################
+#################################### CONVERT LEAD ##########################################
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
   directive: reload_configuration
   class: LeadModuleTest
   tests:
-    - test_edit_lead_pencil_icon
+    - test_perform_convert_lead   # Creates a lead and converts it to a client
 
-#################################### CLIENTS ###############################################
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+  class: TradingAccountCrmTest
+  tests:
+    - test_crm_open_trading_account
+
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
   class: MassEditTestCRM
   tests:
     - test_update_client_details
-    - test_clients_mass_edit
 
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
-  class: MassAssignTestCRM
+##################################### CLIENT'S PASSWORD ##########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Check_Password
+  class: CheckPasswordTestCRM
   tests:
-    - test_clients_mass_assign
+    - test_check_client_password_crm  # check the client account password
+    - test_check_mt4_password_crm   # check the MT4 account password
+
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Change_Password
+  class: ChangePasswordTestCRM
+  tests:
+    - test_change_client_password_from_crm  # change a client account password from the crm
+    - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
+
