--- a/src/test/python/resources/config/Brands/kontofx.yml
+++ b/src/test/python/resources/config/Brands/kontofx.yml
@@ -1,3 +1,3 @@
 pretty_name: "KontoFX"
 url: "https://kontofx.ptscrm.com/"
-url_ca: "https://www.kontofx.com/#/"
+url_ca: "https://www.kontofx.io/#/"
