--- a/src/test/python/resources/config/Brands/olympiamarkets.yml
+++ b/src/test/python/resources/config/Brands/olympiamarkets.yml
@@ -1,3 +1,3 @@
 pretty_name: "Olympiamarkets"
 url: "https://olympiamarkets.ptscrm.com/"
-url_ca: "https://olympiamarkets.com/"
+url_ca: "https://olympiamarkets.co/#/"
