--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -47,11 +47,11 @@ brands:
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
 
-- name: newforexstage2
-  config_file: newforexstage2.yml
+#- name: newforexstage2
+#  config_file: newforexstage2.yml
 
-#- name: olympiamarkets
-#  config_file: olympiamarkets.yml
+- name: olympiamarkets
+  config_file: olympiamarkets.yml
 
 #- name: pmt247
 #  config_file: pmt247.yml
