--- a/src/test/python/resources/config/tests_sanity.yml
+++ b/src/test/python/resources/config/tests_sanity.yml
@@ -17,6 +17,21 @@ tests_config:
     - test_create_lead_api
     - test_create_new_customer
 
+- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+  class: SignUpTest
+  tests:
+    - test_check_sign_up
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+  class: AddNewAccountTestCA
+  tests:
+    - test_add_live_account_ca
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
+  class: TestPagesCA
+  tests:
+    - test_main_menu_pages_loading
+
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
 #  class: CheckModulesTest
 #  tests:
