--- a/src/test/python/resources/config/Brands/q8.yml
+++ b/src/test/python/resources/config/Brands/q8.yml
@@ -1,3 +1,3 @@
 pretty_name: "Q8 Trade"
 url: "https://q8trade.ptscrm.com/"
-url_ca: "https://www.q8trade.com/en/"
+url_ca: "https://www.q8trade.com/"
