--- a/src/main/python/ui/crm/model/BrandsXpath/kontofx_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/kontofx_xpath.yml
@@ -1,2 +1,4 @@
 LeadsModule:
   check_first_line_exist: "//tbody[@id = 'listBody']/tr[1]/td[11]"
+CALoginPage:
+  check_box_accept: "//label[contains (text(), 'By checking this box I accept')]"
