--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -14,8 +14,8 @@ brands:
 #- name: bfxinternational
 #  config_file: bfxinternational.yml
 
-#- name: brokerz
-#  config_file: brokerz.yml
+- name: brokerz
+  config_file: brokerz.yml
 
 #- name: dax-300
 #  config_file: dax-300.yml
@@ -80,8 +80,8 @@ brands:
 #- name: trade99
 #  config_file: trade99.yml
 
-- name: uft
-  config_file: uft.yml
+#- name: uft
+#  config_file: uft.yml
 
 #- name: uprofx
 #  config_file: uprofx.yml
