--- a/src/main/python/ui/crm/model/BrandsXpath/grandefex_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/grandefex_xpath.yml
@@ -1,2 +1,2 @@
 CALoginPage:
-  check_box_accept: "//span[contains (text(), 'I accept the')]"
+  check_box_accept: "//label[contains (text(), 'By checking this box I accept')]"
