--- a/src/main/python/ui/crm/model/BrandsXpath/olympusmarkets_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/olympusmarkets_xpath.yml
@@ -7,3 +7,4 @@ FinancialTransactionsPage:
   modified_time_element: "(//*[@id='listBody']//tr/td[12])[%s]"
 CALoginPage:
   sign_up: "//*[@id='hoveringmenu']/div/div/div[2]/div/div[3]/div/div/div[1]/a[1]"
+  check_box_accept: "//label[contains (text(), 'By checking this box I accept')]"
