--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -14,8 +14,8 @@ brands:
 #- name: bfxinternational
 #  config_file: bfxinternational.yml
 
-- name: brokerz
-  config_file: brokerz.yml
+#- name: brokerz
+#  config_file: brokerz.yml
 
 #- name: dax-300
 #  config_file: dax-300.yml
@@ -29,8 +29,8 @@ brands:
 #- name: gigafx
 #  config_file: gigafx.yml
 
-#- name: grandefex
-#  config_file: grandefex.yml
+- name: grandefex
+  config_file: grandefex.yml
 
 #- name: hizlifx
 #  config_file: hizlifx.yml
