--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -12,7 +12,7 @@ tests_config:
   class: AddNewAccountTestCA
   tests:
     - test_add_live_account_ca
-#    - test_add_demo_account_ca
+    - test_add_demo_account_ca
 #    - test_verify_accounts_in_crm
 #    - test_switch_between_accounts_ca
 
@@ -21,13 +21,18 @@ tests_config:
 #  tests:
 #    - test_main_menu_pages_loading
 #
-- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
-  class: PersonalDetailsUpdateTestCA
+- module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
+  class: TradingProcess
   tests:
+    - test_trading_process_open_position_ca
+
+#- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+#  class: PersonalDetailsUpdateTestCA
+#  tests:
 #    - test_update_personal_details_in_ca
 #    - test_personal_details_were_updated_in_crm
-    - test_update_personal_details_in_crm
-    - test_personal_details_were_updated_in_ca
+#    - test_update_personal_details_in_crm
+#    - test_personal_details_were_updated_in_ca
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
 #  class: CreateSupportTicketTestCa
