--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -25,6 +25,7 @@ tests_config:
   class: TradingProcess
   tests:
     - test_trading_process_open_position_ca
+    - test_verify_open_position_crm
 
 #- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
 #  class: PersonalDetailsUpdateTestCA
