--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -21,6 +21,12 @@ tests_config:
   tests:
     - test_main_menu_pages_loading
 
+- module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
+  class: TradingProcess
+  tests:
+    - test_trading_process_open_position_ca
+    - test_verify_open_position_crm
+
 - module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
   class: PersonalDetailsUpdateTestCA
   tests:
