--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -14,8 +14,8 @@ tests_config:
     - test_add_live_account_ca
     - test_add_demo_account_ca
 #    - test_verify_accounts_in_crm
-    - test_switch_between_accounts_ca
-
+#    - test_switch_between_accounts_ca
+#
 #- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
 #  class: TestPagesCA
 #  tests:
@@ -24,9 +24,11 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
   class: TradingProcess
   tests:
-    - test_trading_process_open_position_ca
-    - test_verify_open_position_crm
-
+    - test_trading_process_open_position_ca    # open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+#    - test_verify_open_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+    - test_trading_process_close_position_ca      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+    - test_verify_close_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+#
 #- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
 #  class: PersonalDetailsUpdateTestCA
 #  tests:
