--- a/src/test/python/resources/config/tests5.yml
+++ b/src/test/python/resources/config/tests5.yml
@@ -9,3 +9,10 @@ tests_config:
     - test_check_dashboard
     - test_check_leaderboard
     - test_check_user_management
+
+######################################### DRAGON TESTS ###################################################
+- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
+  class: CheckDragonTest
+  tests:
+    - test_dragon_leads
+    - test_dragon_clients
