--- a/src/test/python/resources/config/tests2.yml
+++ b/src/test/python/resources/config/tests2.yml
@@ -6,6 +6,7 @@ tests_config:
   tests:
     - test_create_user
     - test_delete_user
+    - test_login_as
 
 ########################################## LEADS ###################################################
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
