--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -38,8 +38,8 @@ brands:
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
 
-- name: kontofx
-  config_file: kontofx.yml
+#- name: kontofx
+#  config_file: kontofx.yml
 
 #- name: libramarkets
 #  config_file: libramarkets.yml
@@ -49,6 +49,9 @@ brands:
 
 #- name: newforexstage2
 #  config_file: newforexstage2.yml
+
+- name: newforexdev3
+  config_file: newforexdev3.yml
 
 #- name: olympiamarkets
 #  config_file: olympiamarkets.yml
