--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -10,6 +10,21 @@ ClientsPage:
   client_country: "//span[@id='dtlview_Country']"
   client_citizenship: "//span[@id='dtlview_Citizenship']"
   citizenship: "//select[@id='citizenship']/option[contains(text(), '%s')]"
+CreateLeadsProfilePage:
+  first_name_field: "//input[@name='firstname']"
+  last_name_field: "//input[@name='lastname']"
+  mobile_field: "//input[@name='mobile']"
+  email_field: "//input[@name='email']"
+  secondary_email_field: "//input[@name='secondaryemail']"
+  panda_partner_id_field: "//input[@name='pandapartnerid']"
+  phone_field: "//input[@name='phone']"
+  tittle_field: "//input[@name='designation']"
+  street_field: "//textarea[@name='lane']"
+  referral_field: "//textarea[@name='refferal']"
+  postal_code_field: "//input[@name='code']"
+  city_field: "//input[@name='city']"
+  description_field: "//textarea[@name='description']"
+  state_field: "//input[@name='state']"
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
   subject_input: "//tr[@class='tableFilters']//td[15]//input"
