--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -47,11 +47,11 @@ brands:
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
 
-#- name: newforexstage2
-#  config_file: newforexstage2.yml
+- name: newforexstage2
+  config_file: newforexstage2.yml
 
-- name: newforexdev3
-  config_file: newforexdev3.yml
+#- name: newforexdev3
+#  config_file: newforexdev3.yml
 
 #- name: olympiamarkets
 #  config_file: olympiamarkets.yml
