--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-- name: kayafx
-  config_file: kaya_fx.yml
+#- name: kayafx
+#  config_file: kaya_fx.yml
 
 #- name: itrader
 #  config_file: itrader.yml
@@ -12,5 +12,5 @@ brands:
 #- name: brokerxp
 #  config_file: brokerxp.yml
 
-#- name: forex_staging
-#  config_file: forex_staging.yml
+- name: forex_staging
+  config_file: forex_staging.yml
