--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -4,11 +4,11 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
   class: MyDashboardActionsTest
   tests:
-#    - test_edit_event_my_dashboard
+    - test_edit_event_my_dashboard
 #    - test_email_icon
-    - test_sms_icon
+#    - test_sms_icon
 #    - test_sorting_columns
-#    - test_searching_by_columns
+    - test_searching_by_columns
 #
 ####################################### MODULES ARE OPENS #########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
