--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -29,8 +29,8 @@ brands:
 #- name: gigafx
 #  config_file: gigafx.yml
 
-#- name: grandefex
-#  config_file: grandefex.yml
+- name: grandefex
+  config_file: grandefex.yml
 
 #- name: hizlifx
 #  config_file: hizlifx.yml
@@ -47,8 +47,8 @@ brands:
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
 
-- name: newforexstage2
-  config_file: newforexstage2.yml
+#- name: newforexstage2
+#  config_file: newforexstage2.yml
 
 #- name: newforexdev3
 #  config_file: newforexdev3.yml
