--- a/src/main/python/ui/crm/model/BrandsXpath/newcrmui_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/newcrmui_xpath.yml
@@ -8,6 +8,12 @@ ConvertLeadModule:
   referral_field: "//input[@formcontrolname='referral']"
   postal_code_field: "//input[@formcontrolname='postalCode']"
   city_field: "//input[@formcontrolname='city']"
+  address_field: "//input[@formcontrolname='address']"
+  password_field: "//input[@formcontrolname='password']"
+  source_name_field: "//input[@formcontrolname='sourceName']"
+  convert_lead_btn: "//span[text()=' Convert lead ']"
+ClientProfilePage:
+  mt4_button: "//mat-panel-title[text()=' MT Actions ']"
 LeadsModule:
   create_lead_module: "//button[@title='Create lead']"
   email_field: "(//input[@placeholder='Email'])[1]"
