--- a/src/main/python/ui/crm/model/BrandsXpath/newcrmui_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/newcrmui_xpath.yml
@@ -15,6 +15,8 @@ ConvertLeadModule:
 ClientProfilePage:
   mt4_button: "//mat-panel-title[text()=' MT Actions ']"
   deposit_sum: "//mat-expansion-panel[@id='trading-accounts']//tr[2]/td[4]/div/span/span"
+  link_trading_account: "//mat-expansion-panel[@id='trading-accounts']//span[@class='td-link' and text()=' %s ']"
+  balance_in_trading_account: "//*[@id='dtlview_Balance']"
 LeadsModule:
   create_lead_module: "//button[@title='Create lead']"
   email_field: "(//input[@placeholder='Email'])[1]"
@@ -43,3 +45,8 @@ CreateLeadsProfilePage:
 MT4DepositModule:
   description_filed: "//input[@id='comment']"
   create_deposit_button: "//span[contains(text(),' Deposit ')]"
+MT4WithdrawModule:
+  create_withdraw_button: "//span[text()=' Withdraw ']"
+  comment_filed: "//input[@id='comment']"
+TradingAccountsInformationPage:
+  balance_text: "//div[label='Balance']//following-sibling::mat-form-field//input"
