--- a/src/test/python/resources/config/Brands/newforexstage2.yml
+++ b/src/test/python/resources/config/Brands/newforexstage2.yml
@@ -1,3 +1,4 @@
 pretty_name: "newforexstage2"
 url: "https://newforexstage2.ptscrm.com/"
 url_ca: "https://newforexstage2.pandats.com/#/"
+otp_secret: SQHBI3QCJOVAYQYL
